--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss/preflight";
+@import "tailwindcss/forms";
+@import "tailwindcss/utilities";
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+body {
+    font-family: 'Instrument Sans', sans-serif;
 }
